<resources>
    <string name="app_name">ejemplocompilacion</string>
    <string name="bienvenido_a_tap_to_phone">Bienvenido a Tap to phone</string>
    <string name="inicio_sesi_n">Inicio Sesión</string>
    <string name="recordar_usuario">Recordar Usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="si_a_n_no_te_has_registrado">Si aún no te has registrado</string>
    <string name="olvide_mi_contrase_a">Olvide mi contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="nombre">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homeventa1">homeventa1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>