<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login2ok">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="101dp"
            android:layout_height="44dp"
            android:layout_marginTop="67dp"
            android:layout_marginBottom="57dp"
            android:text="@string/bienvenido_a_tap_to_phone"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="272dp"
            android:layout_height="42dp"

            android:layout_marginStart="67dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/inicio_sesi_n"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="183dp"
            android:layout_height="22dp"
            android:layout_marginTop="193dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="371dp"
            android:text="@string/recordar_usuario"
            app:buttonTint="@android:color/holo_blue_light"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="324dp"
            android:layout_height="49dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="143dp"
            android:text="************"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            android:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="328dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="219dp"
            android:layout_marginBottom="117dp"
            android:text="ca.arcila@outlook.com"
            android:backgroundTint="@android:color/holo_blue_light"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="16dp"
            android:text="@string/correo_electr_nico"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="102dp"
            android:layout_height="30dp"
            android:layout_marginTop="28dp"
            android:text="@string/contrase_a"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="186dp"
            android:layout_height="24dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="4dp"
            android:text="@string/si_a_n_no_te_has_registrado"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="172dp"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="91dp"
            android:backgroundTint="@color/white"
            android:text="Registrate"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button8"
            android:layout_width="199dp"
            android:layout_height="45dp"
            android:layout_marginBottom="293dp"
            android:backgroundTint="@color/white"
            android:text="Olvidé mi contraseña"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>